--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div class="container">
+        <h1>QUIZ</h1>
+        <hr>
         <p class="question"></p>
         <ul class="option"></ul>
     
