ADDED MEDIA QUERY AND SCORE DIV

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <button id="submit">Submit</button>
         <button id="next">Next</button>
     </div>
+    <div >
+        <h2 id="result">Score :- <span></span></h2>
+    </div>
     <script src="./quiz-question.js"></script>
     <script src="./script.js"></script>
 </body>
